fixed feature item alignment and about section

--- a/chs-next/styles/globals.css
+++ b/chs-next/styles/globals.css
@@ -49,7 +49,7 @@ body {
   width: 90%;
   color: #333;
 
-  margin-top: 6rem;
+  margin-top: 4rem;
 }
 
 .item-image {
@@ -108,6 +108,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   margin-top: 2.5rem;
+  justify-content: center;
 }
 
 .feature-item {
@@ -131,7 +132,7 @@ body {
 }
 
 .feature-item-about {
-  height: fit-content;
+  height: 50vh;
   max-width: 30%;
   min-width: 300px;
   display: flex;
@@ -164,6 +165,7 @@ body {
 }
 
 .theme-list {
+  justify-content: center;
 }
 
 .theme-list-items {
